fix: add some weight to font in tooltips for legibility

--- a/src/scss/atomic/molecules/_tooltip.scss
+++ b/src/scss/atomic/molecules/_tooltip.scss
@@ -9,6 +9,8 @@ $triangleSize: $buildingUnit;
     max-width: 150px;
     min-height: $buildingUnit * 3;
 
+    font-weight: 400;
+
     @extend %reset-last-margin;
     z-index: 200;
 
