--- a/src/scss/atomic/organisms/_resellers.scss
+++ b/src/scss/atomic/organisms/_resellers.scss
@@ -11,7 +11,7 @@
 .resellers__tooltip {
     @extend %fontPrimary;
     @include font-line-ratio(prim-s);
-    font-weight: 100;
+    //font-weight: 100;
 
     max-width: 296px;
     position: absolute;
